@@ -4,6 +4,7 @@ Views 6.x-3.0-dev
     o #682888 by jcmarco: With zen, the new $classes array could fail for row styles.
     o #765340 by dereine: <front> token accidentally removed by html entity stripping from URLs.
     o #765352: Fix for postgress versions prior to 8.3 which caused data loss in update.php. Note: This will not repair lost data. If you experienced this you must restore your views_display table from backup.
+    o #766046: Live preview broken right after adding new display.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
